fix: command menu should not wrap short commands

--- a/public/styles.8c74bf.css
+++ b/public/styles.8c74bf.css
@@ -1562,6 +1562,11 @@ abbr[title]:focus-visible::after,
        column-gap: 3rem;
 }
 
+.gap-x-4 {
+  -moz-column-gap: 1rem;
+       column-gap: 1rem;
+}
+
 .gap-y-4 {
   row-gap: 1rem;
 }
@@ -1616,6 +1621,10 @@ abbr[title]:focus-visible::after,
   --tw-space-y-reverse: 0;
   margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(2rem * var(--tw-space-y-reverse));
+}
+
+.text-pretty {
+  text-wrap: pretty;
 }
 
 .rounded {
